[gd_scene load_steps=6 format=3 uid="uid://by6qfdacpxedr"]

[ext_resource type="Texture2D" uid="uid://cbmxf3tvn7p1o" path="res://assets/textures/ui_screen.png" id="1_1i6xa"]
[ext_resource type="Script" path="res://ui/game_over_screen.gd" id="1_3cj0s"]
[ext_resource type="PackedScene" uid="uid://ltk0r5nwd7pa" path="res://ui/button.tscn" id="2_6xqgq"]
[ext_resource type="FontFile" uid="uid://bwad8qafhdmdx" path="res://fonts/galactic_memesbruh03.ttf" id="2_cy7e1"]
[ext_resource type="PackedScene" uid="uid://41n4kltx64wg" path="res://ui/quit_confirmation.tscn" id="5_ah68u"]

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3cj0s")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -60.0
offset_right = 70.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_1i6xa")
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="CenterContainer" type="CenterContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/CenterContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 2
alignment = 1

[node name="Label" type="Label" parent="NinePatchRect/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.054902, 1, 0.4, 1)
theme_override_fonts/font = ExtResource("2_cy7e1")
text = "Vital signs lost"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" parent="NinePatchRect/CenterContainer/VBoxContainer" instance=ExtResource("2_6xqgq")]
layout_mode = 2
text = "Restart run"

[node name="ReturnButton" parent="NinePatchRect/CenterContainer/VBoxContainer" instance=ExtResource("2_6xqgq")]
layout_mode = 2
text = "Return to ship"

[node name="QuitButton" parent="NinePatchRect/CenterContainer/VBoxContainer" instance=ExtResource("2_6xqgq")]
layout_mode = 2
text = "Quit game"

[node name="QuitConfirmation" parent="." instance=ExtResource("5_ah68u")]
visible = false
layout_mode = 1

[connection signal="pressed" from="NinePatchRect/CenterContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="NinePatchRect/CenterContainer/VBoxContainer/ReturnButton" to="." method="_on_return_button_pressed"]
[connection signal="pressed" from="NinePatchRect/CenterContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
